tests/cases/standard-library/errors/prelude-string-type-args.ari
fn main() -> i64 {
  let text: String[i64] = "ari";
  return 0;
}
